ply-3.4/example/ess/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    LNOT
    RSHIFT
    VOID
    UMINUS
    DIVEQUAL
    LSHIFT
    COLON
    MODEQUAL
    OUT
    XOR
    PLUSPLUS
    PERIOD
    PLUSEQUAL
    MINUSMINUS
    AND
    LBRACKET
    MINUSEQUAL
    BREAK
    CONTINUE
    NOT
    RBRACKET
    TIMESEQUAL
    OR
    MOD

Grammar

Rule 0     S' -> program
Rule 1     program -> program function_definition
Rule 2     program -> function_definition
Rule 3     function_definition -> head NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
Rule 4     function_definition -> head LBRACE NEWLINE body RBRACE NEWLINE
Rule 5     head -> IDENTIFIER LPAREN argument_list RPAREN
Rule 6     argument_list -> argument_declaration
Rule 7     argument_list -> argument_declaration COMMA argument_list
Rule 8     argument_declaration -> IDENTIFIER
Rule 9     argument_declaration -> NUMBER
Rule 10    body -> body statement
Rule 11    body -> statement
Rule 12    statement -> assignment NEWLINE
Rule 13    statement -> multiple_assignment NEWLINE
Rule 14    statement -> parralel_assignment NEWLINE
Rule 15    statement -> if_block
Rule 16    statement -> if_block else_block
Rule 17    statement -> while_block NEWLINE
Rule 18    statement -> function_call NEWLINE
Rule 19    assignment -> IDENTIFIER EQUALS expression
Rule 20    multiple_assignment -> assignment
Rule 21    multiple_assignment -> IDENTIFIER EQUALS multiple_assignment
Rule 22    parralel_assignment -> assignment
Rule 23    parralel_assignment -> IDENTIFIER COMMA parralel_assignment COMMA expression
Rule 24    function_call -> IDENTIFIER LPAREN parameters_list RPAREN
Rule 25    function_call -> IDENTIFIER EQUALS IDENTIFIER LPAREN parameters_list RPAREN
Rule 26    parameters_list -> IDENTIFIER
Rule 27    parameters_list -> NUMBER
Rule 28    parameters_list -> parameters_list COMMA IDENTIFIER
Rule 29    parameters_list -> parameters_list COMMA NUMBER
Rule 30    while_block -> WHILE LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE
Rule 31    while_block -> WHILE LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE
Rule 32    if_block -> IF LPAREN condition_list RPAREN LBRACE body RBRACE NEWLINE
Rule 33    if_block -> IF LPAREN condition_list RPAREN NEWLINE LBRACE body RBRACE NEWLINE
Rule 34    if_block -> IF LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE NEWLINE
Rule 35    if_block -> IF LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
Rule 36    else_block -> ELSE LBRACE body RBRACE NEWLINE
Rule 37    else_block -> ELSE LBRACE NEWLINE body RBRACE NEWLINE
Rule 38    else_block -> ELSE NEWLINE LBRACE body RBRACE NEWLINE
Rule 39    else_block -> ELSE NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
Rule 40    condition_list -> condition
Rule 41    condition_list -> condition comb_symbol condition_list
Rule 42    comb_symbol -> LAND
Rule 43    comb_symbol -> LOR
Rule 44    condition -> IDENTIFIER comp_symbol IDENTIFIER
Rule 45    condition -> IDENTIFIER comp_symbol NUMBER
Rule 46    condition -> NUMBER comp_symbol IDENTIFIER
Rule 47    condition -> NUMBER comp_symbol NUMBER
Rule 48    comp_symbol -> LT
Rule 49    comp_symbol -> GT
Rule 50    comp_symbol -> LE
Rule 51    comp_symbol -> GE
Rule 52    comp_symbol -> EQ
Rule 53    comp_symbol -> NE
Rule 54    expression -> expression PLUS expression
Rule 55    expression -> expression MINUS expression
Rule 56    expression -> expression TIMES expression
Rule 57    expression -> expression DIVIDE expression
Rule 58    expression -> MINUS expression
Rule 59    expression -> NUMBER
Rule 60    expression -> IDENTIFIER

Terminals, with rules where they appear

AND                  : 
BREAK                : 
COLON                : 
COMMA                : 7 23 23 28 29
CONTINUE             : 
DIVEQUAL             : 
DIVIDE               : 57
ELSE                 : 36 37 38 39
EQ                   : 52
EQUALS               : 19 21 25
GE                   : 51
GT                   : 49
IDENTIFIER           : 5 8 19 21 23 24 25 25 26 28 44 44 45 46 60
IF                   : 32 33 34 35
LAND                 : 42
LBRACE               : 3 4 30 31 32 33 34 35 36 37 38 39
LBRACKET             : 
LE                   : 50
LNOT                 : 
LOR                  : 43
LPAREN               : 5 24 25 30 31 32 33 34 35
LSHIFT               : 
LT                   : 48
MINUS                : 55 58
MINUSEQUAL           : 
MINUSMINUS           : 
MOD                  : 
MODEQUAL             : 
NE                   : 53
NEWLINE              : 3 3 3 4 4 12 13 14 17 18 30 31 31 32 33 33 34 34 35 35 35 36 37 37 38 38 39 39 39
NOT                  : 
NUMBER               : 9 27 29 45 46 47 47 59
OR                   : 
OUT                  : 
PERIOD               : 
PLUS                 : 54
PLUSEQUAL            : 
PLUSPLUS             : 
RBRACE               : 3 4 30 31 32 33 34 35 36 37 38 39
RBRACKET             : 
RPAREN               : 5 24 25 30 31 32 33 34 35
RSHIFT               : 
TIMES                : 56
TIMESEQUAL           : 
UMINUS               : 
VOID                 : 
WHILE                : 30 31
XOR                  : 
error                : 

Nonterminals, with rules where they appear

argument_declaration : 6 7
argument_list        : 5 7
assignment           : 12 20 22
body                 : 3 4 10 30 31 32 33 34 35 36 37 38 39
comb_symbol          : 41
comp_symbol          : 44 45 46 47
condition            : 40 41
condition_list       : 30 31 32 33 34 35 41
else_block           : 16
expression           : 19 23 54 54 55 55 56 56 57 57 58
function_call        : 18
function_definition  : 1 2
head                 : 3 4
if_block             : 15 16
multiple_assignment  : 13 21
parameters_list      : 24 25 28 29
parralel_assignment  : 14 23
program              : 1 0
statement            : 10 11
while_block          : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program function_definition
    (2) program -> . function_definition
    (3) function_definition -> . head NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (4) function_definition -> . head LBRACE NEWLINE body RBRACE NEWLINE
    (5) head -> . IDENTIFIER LPAREN argument_list RPAREN

    IDENTIFIER      shift and go to state 4

    head                           shift and go to state 1
    program                        shift and go to state 3
    function_definition            shift and go to state 2

state 1

    (3) function_definition -> head . NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (4) function_definition -> head . LBRACE NEWLINE body RBRACE NEWLINE

    NEWLINE         shift and go to state 5
    LBRACE          shift and go to state 6


state 2

    (2) program -> function_definition .

    IDENTIFIER      reduce using rule 2 (program -> function_definition .)
    $end            reduce using rule 2 (program -> function_definition .)


state 3

    (0) S' -> program .
    (1) program -> program . function_definition
    (3) function_definition -> . head NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (4) function_definition -> . head LBRACE NEWLINE body RBRACE NEWLINE
    (5) head -> . IDENTIFIER LPAREN argument_list RPAREN

    IDENTIFIER      shift and go to state 4

    head                           shift and go to state 1
    function_definition            shift and go to state 7

state 4

    (5) head -> IDENTIFIER . LPAREN argument_list RPAREN

    LPAREN          shift and go to state 8


state 5

    (3) function_definition -> head NEWLINE . LBRACE NEWLINE body RBRACE NEWLINE

    LBRACE          shift and go to state 9


state 6

    (4) function_definition -> head LBRACE . NEWLINE body RBRACE NEWLINE

    NEWLINE         shift and go to state 10


state 7

    (1) program -> program function_definition .

    IDENTIFIER      reduce using rule 1 (program -> program function_definition .)
    $end            reduce using rule 1 (program -> program function_definition .)


state 8

    (5) head -> IDENTIFIER LPAREN . argument_list RPAREN
    (6) argument_list -> . argument_declaration
    (7) argument_list -> . argument_declaration COMMA argument_list
    (8) argument_declaration -> . IDENTIFIER
    (9) argument_declaration -> . NUMBER

    IDENTIFIER      shift and go to state 14
    NUMBER          shift and go to state 11

    argument_declaration           shift and go to state 13
    argument_list                  shift and go to state 12

state 9

    (3) function_definition -> head NEWLINE LBRACE . NEWLINE body RBRACE NEWLINE

    NEWLINE         shift and go to state 15


state 10

    (4) function_definition -> head LBRACE NEWLINE . body RBRACE NEWLINE
    (10) body -> . body statement
    (11) body -> . statement
    (12) statement -> . assignment NEWLINE
    (13) statement -> . multiple_assignment NEWLINE
    (14) statement -> . parralel_assignment NEWLINE
    (15) statement -> . if_block
    (16) statement -> . if_block else_block
    (17) statement -> . while_block NEWLINE
    (18) statement -> . function_call NEWLINE
    (19) assignment -> . IDENTIFIER EQUALS expression
    (20) multiple_assignment -> . assignment
    (21) multiple_assignment -> . IDENTIFIER EQUALS multiple_assignment
    (22) parralel_assignment -> . assignment
    (23) parralel_assignment -> . IDENTIFIER COMMA parralel_assignment COMMA expression
    (32) if_block -> . IF LPAREN condition_list RPAREN LBRACE body RBRACE NEWLINE
    (33) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE body RBRACE NEWLINE
    (34) if_block -> . IF LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE NEWLINE
    (35) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (30) while_block -> . WHILE LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE
    (31) while_block -> . WHILE LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE
    (24) function_call -> . IDENTIFIER LPAREN parameters_list RPAREN
    (25) function_call -> . IDENTIFIER EQUALS IDENTIFIER LPAREN parameters_list RPAREN

    IDENTIFIER      shift and go to state 20
    IF              shift and go to state 24
    WHILE           shift and go to state 17

    body                           shift and go to state 21
    parralel_assignment            shift and go to state 18
    assignment                     shift and go to state 22
    if_block                       shift and go to state 25
    function_call                  shift and go to state 16
    while_block                    shift and go to state 26
    statement                      shift and go to state 19
    multiple_assignment            shift and go to state 23

state 11

    (9) argument_declaration -> NUMBER .

    COMMA           reduce using rule 9 (argument_declaration -> NUMBER .)
    RPAREN          reduce using rule 9 (argument_declaration -> NUMBER .)


state 12

    (5) head -> IDENTIFIER LPAREN argument_list . RPAREN

    RPAREN          shift and go to state 27


state 13

    (6) argument_list -> argument_declaration .
    (7) argument_list -> argument_declaration . COMMA argument_list

    RPAREN          reduce using rule 6 (argument_list -> argument_declaration .)
    COMMA           shift and go to state 28


state 14

    (8) argument_declaration -> IDENTIFIER .

    COMMA           reduce using rule 8 (argument_declaration -> IDENTIFIER .)
    RPAREN          reduce using rule 8 (argument_declaration -> IDENTIFIER .)


state 15

    (3) function_definition -> head NEWLINE LBRACE NEWLINE . body RBRACE NEWLINE
    (10) body -> . body statement
    (11) body -> . statement
    (12) statement -> . assignment NEWLINE
    (13) statement -> . multiple_assignment NEWLINE
    (14) statement -> . parralel_assignment NEWLINE
    (15) statement -> . if_block
    (16) statement -> . if_block else_block
    (17) statement -> . while_block NEWLINE
    (18) statement -> . function_call NEWLINE
    (19) assignment -> . IDENTIFIER EQUALS expression
    (20) multiple_assignment -> . assignment
    (21) multiple_assignment -> . IDENTIFIER EQUALS multiple_assignment
    (22) parralel_assignment -> . assignment
    (23) parralel_assignment -> . IDENTIFIER COMMA parralel_assignment COMMA expression
    (32) if_block -> . IF LPAREN condition_list RPAREN LBRACE body RBRACE NEWLINE
    (33) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE body RBRACE NEWLINE
    (34) if_block -> . IF LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE NEWLINE
    (35) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (30) while_block -> . WHILE LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE
    (31) while_block -> . WHILE LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE
    (24) function_call -> . IDENTIFIER LPAREN parameters_list RPAREN
    (25) function_call -> . IDENTIFIER EQUALS IDENTIFIER LPAREN parameters_list RPAREN

    IDENTIFIER      shift and go to state 20
    IF              shift and go to state 24
    WHILE           shift and go to state 17

    body                           shift and go to state 29
    parralel_assignment            shift and go to state 18
    assignment                     shift and go to state 22
    if_block                       shift and go to state 25
    function_call                  shift and go to state 16
    while_block                    shift and go to state 26
    statement                      shift and go to state 19
    multiple_assignment            shift and go to state 23

state 16

    (18) statement -> function_call . NEWLINE

    NEWLINE         shift and go to state 30


state 17

    (30) while_block -> WHILE . LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE
    (31) while_block -> WHILE . LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE

    LPAREN          shift and go to state 31


state 18

    (14) statement -> parralel_assignment . NEWLINE

    NEWLINE         shift and go to state 32


state 19

    (11) body -> statement .

    RBRACE          reduce using rule 11 (body -> statement .)
    IDENTIFIER      reduce using rule 11 (body -> statement .)
    IF              reduce using rule 11 (body -> statement .)
    WHILE           reduce using rule 11 (body -> statement .)


state 20

    (19) assignment -> IDENTIFIER . EQUALS expression
    (21) multiple_assignment -> IDENTIFIER . EQUALS multiple_assignment
    (23) parralel_assignment -> IDENTIFIER . COMMA parralel_assignment COMMA expression
    (24) function_call -> IDENTIFIER . LPAREN parameters_list RPAREN
    (25) function_call -> IDENTIFIER . EQUALS IDENTIFIER LPAREN parameters_list RPAREN

    EQUALS          shift and go to state 33
    COMMA           shift and go to state 34
    LPAREN          shift and go to state 35


state 21

    (4) function_definition -> head LBRACE NEWLINE body . RBRACE NEWLINE
    (10) body -> body . statement
    (12) statement -> . assignment NEWLINE
    (13) statement -> . multiple_assignment NEWLINE
    (14) statement -> . parralel_assignment NEWLINE
    (15) statement -> . if_block
    (16) statement -> . if_block else_block
    (17) statement -> . while_block NEWLINE
    (18) statement -> . function_call NEWLINE
    (19) assignment -> . IDENTIFIER EQUALS expression
    (20) multiple_assignment -> . assignment
    (21) multiple_assignment -> . IDENTIFIER EQUALS multiple_assignment
    (22) parralel_assignment -> . assignment
    (23) parralel_assignment -> . IDENTIFIER COMMA parralel_assignment COMMA expression
    (32) if_block -> . IF LPAREN condition_list RPAREN LBRACE body RBRACE NEWLINE
    (33) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE body RBRACE NEWLINE
    (34) if_block -> . IF LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE NEWLINE
    (35) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (30) while_block -> . WHILE LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE
    (31) while_block -> . WHILE LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE
    (24) function_call -> . IDENTIFIER LPAREN parameters_list RPAREN
    (25) function_call -> . IDENTIFIER EQUALS IDENTIFIER LPAREN parameters_list RPAREN

    RBRACE          shift and go to state 37
    IDENTIFIER      shift and go to state 20
    IF              shift and go to state 24
    WHILE           shift and go to state 17

    parralel_assignment            shift and go to state 18
    assignment                     shift and go to state 22
    if_block                       shift and go to state 25
    function_call                  shift and go to state 16
    while_block                    shift and go to state 26
    statement                      shift and go to state 36
    multiple_assignment            shift and go to state 23

state 22

    (12) statement -> assignment . NEWLINE
    (20) multiple_assignment -> assignment .
    (22) parralel_assignment -> assignment .

  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 38

  ! NEWLINE         [ reduce using rule 20 (multiple_assignment -> assignment .) ]
  ! NEWLINE         [ reduce using rule 22 (parralel_assignment -> assignment .) ]


state 23

    (13) statement -> multiple_assignment . NEWLINE

    NEWLINE         shift and go to state 39


state 24

    (32) if_block -> IF . LPAREN condition_list RPAREN LBRACE body RBRACE NEWLINE
    (33) if_block -> IF . LPAREN condition_list RPAREN NEWLINE LBRACE body RBRACE NEWLINE
    (34) if_block -> IF . LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE NEWLINE
    (35) if_block -> IF . LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE NEWLINE

    LPAREN          shift and go to state 40


state 25

    (15) statement -> if_block .
    (16) statement -> if_block . else_block
    (36) else_block -> . ELSE LBRACE body RBRACE NEWLINE
    (37) else_block -> . ELSE LBRACE NEWLINE body RBRACE NEWLINE
    (38) else_block -> . ELSE NEWLINE LBRACE body RBRACE NEWLINE
    (39) else_block -> . ELSE NEWLINE LBRACE NEWLINE body RBRACE NEWLINE

    RBRACE          reduce using rule 15 (statement -> if_block .)
    IDENTIFIER      reduce using rule 15 (statement -> if_block .)
    IF              reduce using rule 15 (statement -> if_block .)
    WHILE           reduce using rule 15 (statement -> if_block .)
    ELSE            shift and go to state 41

    else_block                     shift and go to state 42

state 26

    (17) statement -> while_block . NEWLINE

    NEWLINE         shift and go to state 43


state 27

    (5) head -> IDENTIFIER LPAREN argument_list RPAREN .

    NEWLINE         reduce using rule 5 (head -> IDENTIFIER LPAREN argument_list RPAREN .)
    LBRACE          reduce using rule 5 (head -> IDENTIFIER LPAREN argument_list RPAREN .)


state 28

    (7) argument_list -> argument_declaration COMMA . argument_list
    (6) argument_list -> . argument_declaration
    (7) argument_list -> . argument_declaration COMMA argument_list
    (8) argument_declaration -> . IDENTIFIER
    (9) argument_declaration -> . NUMBER

    IDENTIFIER      shift and go to state 14
    NUMBER          shift and go to state 11

    argument_declaration           shift and go to state 13
    argument_list                  shift and go to state 44

state 29

    (3) function_definition -> head NEWLINE LBRACE NEWLINE body . RBRACE NEWLINE
    (10) body -> body . statement
    (12) statement -> . assignment NEWLINE
    (13) statement -> . multiple_assignment NEWLINE
    (14) statement -> . parralel_assignment NEWLINE
    (15) statement -> . if_block
    (16) statement -> . if_block else_block
    (17) statement -> . while_block NEWLINE
    (18) statement -> . function_call NEWLINE
    (19) assignment -> . IDENTIFIER EQUALS expression
    (20) multiple_assignment -> . assignment
    (21) multiple_assignment -> . IDENTIFIER EQUALS multiple_assignment
    (22) parralel_assignment -> . assignment
    (23) parralel_assignment -> . IDENTIFIER COMMA parralel_assignment COMMA expression
    (32) if_block -> . IF LPAREN condition_list RPAREN LBRACE body RBRACE NEWLINE
    (33) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE body RBRACE NEWLINE
    (34) if_block -> . IF LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE NEWLINE
    (35) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (30) while_block -> . WHILE LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE
    (31) while_block -> . WHILE LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE
    (24) function_call -> . IDENTIFIER LPAREN parameters_list RPAREN
    (25) function_call -> . IDENTIFIER EQUALS IDENTIFIER LPAREN parameters_list RPAREN

    RBRACE          shift and go to state 45
    IDENTIFIER      shift and go to state 20
    IF              shift and go to state 24
    WHILE           shift and go to state 17
